Created starter code with physics and 3D shapes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CMPM 121 Final</title>
     <link rel="icon" href="data:,">
+    <link rel="stylesheet" href="src/style.css">
   </head>
 
   <body>
@@ -12,6 +13,7 @@
       Students: Try not to make *any* changes to this index.html file.
       Instead, express all of your design using TypeScript.
       -->
+    <script async src="https://cdn.jsdelivr.net/gh/kripken/ammo.js@HEAD/builds/ammo.js"></script>
     <script type="module" src="src/main.ts"></script>
   </body>
 </html>
