trying to get pages to work

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       Instead, express all of your design using TypeScript.
       -->
     <script async src="https://cdn.jsdelivr.net/gh/kripken/ammo.js@HEAD/builds/ammo.js"></script>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/testMain.ts"></script>
   </body>
 </html>
